# SpecTalk-GCP

./: .gitignore  AGENTS.md  CLAUDE.md  KNOWN_ISSUES.md  README.md  TODO.md  report.md
gervis-backend/: .env.example  CHANGELOG.md  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  config.py  main.py  pyproject.toml
gervis-backend/agents/: orchestrator.py
gervis-backend/agents/team_code_pr_designers/: __init__.py  designer_agent.py
gervis-backend/api/: auth.py  conversations.py  integrations.py  jobs.py  notifications.py  voice.py
gervis-backend/auth/: firebase.py  jwt_handler.py
gervis-backend/db/: database.py  models.py
gervis-backend/docs/: database-setup.md  gcloud-setup.md  migrations.md  phase2-setup.md  phase3-testing.md  phase4-deployment.md  shutdown-guide.md
gervis-backend/middleware/: auth.py
gervis-backend/migrations/: env.py
gervis-backend/scripts/: README.md  db_query.py  get_firebase_token.py  test_auth_session.py  test_gemini_key.py  test_openclaw.py
gervis-backend/services/: audio_session_manager.py  control_channels.py  conversation_service.py  encryption_service.py  gemini_live_client.py  job_service.py  location_channels.py  location_context_service.py  notification_service.py  project_service.py  resume_event_service.py  session_logger.py  speech_preferences.py  tracing.py  visual_capture_channels.py
gervis-backend/tools/: coding_tools.py  location_tool.py  maps_tool.py  notification_resume_tool.py  openclaw_coding_tool.py  project_tools.py  search_tool.py  visual_capture_tool.py
gervis-backend/ws/: voice_handler.py
tests/gemini_test/: .env.example  pyproject.toml  simple_voice_agent_test.html  simple_voice_agent_test.py
(+105 files in other folders)
